--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -9,156 +9,181 @@
 	<link rel="stylesheet" href="css.css">
 </head>
 <body>
+	<!-- <h1 id="highPitchedNote">high pitched note</h1> -->
+	<video autoplay muted loop id="HypnoVideo" class="hypnotizerend">
+		<source src="videos/sound-waves.mp4" type="video/mp4">
+	  </video>
+
+	  <video autoplay muted loop id="AlarmVideo" class="alarm">
+		<source src="videos/Alarm.mp4" type="video/mp4">
+	  </video>
+
+	  <video autoplay muted loop id="Tril" class="Tril">
+		<source src="videos/trilling.mov" type="video/mp4">
+	  </video>
+
+	  <video autoplay muted loop id="Wit" class="Wit">
+		<source src="videos/wit.mov" type="video/mp4">
+	  </video>
+	 
+	  <div id="beschrijving">
+		<p></p>
+	</div>
+
 	<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/vrP-_T-h9YM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 	<div id="video-container">
 		<div id="video-mask">
 			<div id="video-placeholder"></div>
+		
 		</div>
+
+		
 	
 		<div id="closed-captions">
+			
 			<p class="voice1">
-				Officer K D 6 - 3 . 7. Let’s begin. Ready?
+				[Examinor] Officer K D 6 - 3 . 7. Let’s begin. Ready?
 			</p>
 			<p class="voice2">
-				Yes, sir
+				[K] Yes, sir
 			</p>
 			<p class="voice1">
-				Recite your baseline.
+				[Examinor] Recite your baseline.
 			</p>
 			<p class="voice2">
-				And blood-black nothingness began to spin
+				[K] And blood-black nothingness began to spin
 			</p>
 			<p class="voice2">
-				A system of cells interlinked within cells,
+				[K] A system of cells interlinked within cells,
 			</p>
 			<p class="voice2">
-				interlinked within cells, interlinked within one stem.
+				[K] interlinked within cells, interlinked within one stem.
 			</p>
 			<p class="voice3">
 				Fuck off, skin-job!
 			</p>
 			<p class="voice2">
-				And dreadfully distinct against the dark, a tall white fountain played...
+				[K] And dreadfully distinct against the dark, a tall white fountain played...
 			</p>
 			<p class="voice1">
-				Cells.
+				[Examinor] Cells.
 			</p>
 			<p class="voice2">
-				Cells.
+				[K] Cells.
 			</p>
 			<p class="voice1">
-				Have you ever been in an institution?
+				[Examinor] Have you ever been in an institution?
 			</p>
 			<p class="voice1">
-				Cells.
+				[Examinor] Cells.
 			</p>
 			<p class="voice2">
-				Cells.
+				[K] Cells.
 			</p>
 			<p class="voice1">
-				Do they keep you in a cell?
+				[Examinor] Do they keep you in a cell?
 			</p>
 			<p class="voice1">
-				Cells.
+				[Examinor] Cells.
 			</p>
 			<p class="voice2">
-				Cells.
+				[K] Cells.
 			</p>
 			<p class="voice1">
-				When you're not performing your duties, do they keep you in a little box?
+				[Examinor] When you're not performing your duties, do they keep you in a little box?
 			</p>
 			<p class="voice1">
-				Cells.
+				[Examinor] Cells.
 			</p>
 			<p class="voice2">
-				Cells.
+				[K] Cells.
 			</p>
 			<p class="voice1">
-				Interlinked.
+				[Examinor] Interlinked.
 			</p>
 			<p class="voice2">
-				Interlinked.
+				[K] Interlinked.
 			</p>
 			<p class="voice1">
-				What's it like to hold the hand of someone you love?
+				[Examinor] What's it like to hold the hand of someone you love?
 			</p>
 			<p class="voice1">
-				Interlinked.
+				[Examinor] Interlinked.
 			</p>
 			<p class="voice2">
-				Interlinked.
+				[K] Interlinked.
 			</p>
 			<p class="voice1">
-				Did they teach you how to feel, finger to finger?
+				[Examinor] Did they teach you how to feel, finger to finger?
 			</p>
 			<p class="voice1">
-				Interlinked.
+				[Examinor] Interlinked.
 			</p>
 			<p class="voice2">
-				Interlinked.
+				[K] Interlinked.
 			</p>
 			<p class="voice1">
-				Do you long for having your heart interlinked?
+				[Examinor] Do you long for having your heart interlinked?
 			</p>
 			<p class="voice1">
-				Interlinked.
+				[Examinor] Interlinked.
 			</p>
 			<p class="voice2">
-				Interlinked.
+				[K] Interlinked.
 			</p>
 			<p class="voice1">
-				Do you dream about being interlinked?
+				[Examinor] Do you dream about being interlinked?
 			</p>
 			<p class="voice2">
-				Interlinked.
+				[K] Interlinked.
 			</p>
 			<p class="voice1">
-				What's it like to hold your child in your arms?
+				[Examinor] What's it like to hold your child in your arms?
 			</p>
 			<p class="voice1">
-				Interlinked.
+				[Examinor] Interlinked.
 			</p>
 			<p class="voice2">
-				Interlinked.
+				[K] Interlinked.
 			</p>
 			<p class="voice1">
-				Do you feel that there's a part of you that's missing?
+				[Examinor] Do you feel that there's a part of you that's missing?
 			</p>
 			<p class="voice1">
-				Interlinked.
+				[Examinor] Interlinked.
 			</p>
 			<p class="voice2">
-				Interlinked.
+				[K] Interlinked.
 			</p>
 			<p class="voice1">
-				Within cells interlinked.
+				[Examinor] Within cells interlinked.
 			</p>
 			<p class="voice2">
-				Within cells interlinked.
+				[K] Within cells interlinked.
 			</p>
 			<p class="voice1">
-				Why don't you say that three times: "within cells interlinked"
+				[Examinor] Why don't you say that three times: "within cells interlinked"
 			</p>
 			<p class="voice2">
-				Within cells interlinked.
+				[K] Within cells interlinked.
 			</p>
 			<p class="voice2">
-				Within cells interlinked.
+				[K] Within cells interlinked.
 			</p>
 			<p class="voice2">
-				Within cells interlinked.
+				[K] Within cells interlinked.
 			</p>
 			<p class="voice4">
-				We're done.
+				[Examinor] We're done.
 			</p>
 			<p class="voice4">
-				Constant K.
+				[Examinor] Constant K.
 			</p>
 			<p class="voice4">
-				You can pick up your bonus.
+				[Examinor] You can pick up your bonus.
 			</p>
 			<p class="voice2">
-				Thank you, sir.
+				[K] Thank you, sir.
 			</p>
 	
 	
