--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -22,6 +22,14 @@
 		<source src="videos/trilling.mov" type="video/mp4">
 	  </video>
 
+	  <video autoplay muted loop id="Tunnelvideo" class="tunnel">
+		<source src="videos/Tunnel2.mov" type="video/mp4">
+	  </video>
+
+	  <video autoplay muted loop id="Tunnel3" class="tunnel3">
+		<source src="videos/tunneltje.MOV" type="video/mp4">
+	  </video>
+
 	  <video autoplay muted loop id="Wit" class="Wit">
 		<source src="videos/wit.mov" type="video/mp4">
 	  </video>
